fix: no card text overlaping

--- a/src/index-mobile.css
+++ b/src/index-mobile.css
@@ -6,7 +6,7 @@
 
 @media only screen and (max-width: 1277px) {
   #pop .card {
-    height: 160px;
+    height: 154px;
   }
 
   #host .card {
